--- a/unicodefonttable.dtx
+++ b/unicodefonttable.dtx
@@ -255,7 +255,7 @@
 %
 %    By default a title using the \cs{caption} command is produced; on
 %    continuation titles, the \meta{font-features} are not shown.
-%    Note that this is a \env{longtable} header row, so you either need to use
+%    This is typeset as a \env{longtable} header row, so you either need to use
 %    \cs{multicolumn} or a \cs{caption} command\Dash otherwise everything
 %    ends up in the first column.
 %
