regen tests after TL23 and alter (C) notes

--- a/unicodefonttable.dtx
+++ b/unicodefonttable.dtx
@@ -1,6 +1,6 @@
 %%%%% \iffalse meta-comment
 %
-%% File: unicodefonttable.dtx (C) Copyright 2019-2021 Frank Mittelbach
+%% File: unicodefonttable.dtx (C) Copyright 2019-2023 Frank Mittelbach
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -17,8 +17,8 @@
 % for those people who are interested or want to report an issue.
 %
 
-\def\unicodefonttabledate   {2022/11/12}
-\def\unicodefonttableversion{v1.0g}
+\def\unicodefonttabledate   {2023/04/03}
+\def\unicodefonttableversion{1.0g}
 
 
 %<*driver>
