--- a/unicodefonttable.dtx
+++ b/unicodefonttable.dtx
@@ -17,8 +17,8 @@
 % for those people who are interested or want to report an issue.
 %
 
-\def\unicodefonttabledate   {2023/04/03}
-\def\unicodefonttableversion{1.0g}
+\def\unicodefonttabledate   {2023/05/10}
+\def\unicodefonttableversion{1.0h}
 
 
 %<*driver>
@@ -1912,7 +1912,7 @@
          { "0B8 }{ Tamil }
          { "0C0 }{ Telugu }
          { "0C8 }{ Kannada }
-         { "0D0 }{ Malayalm }
+         { "0D0 }{ Malayalam }
          { "0D8 }{ Sinhala }
          { "0E0 }{ Thai }
          { "0E8 }{ Lao }
